# Video-Pre-Training

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  README.md  agent.py  behavioural_cloning.py  collect.sh  collect_policy.py  inverse_dynamics_model.py  lancedb.sh  lancedb_rollout.py  main.py  pyproject.toml  requirements.txt  run_agent.py
apptainer/: vpt-minerl.def
docker/: vpt-minerl-entrypoint.sh
docs/: slurm_container.md
gym3/: __init__.py  types.py
lib/: action_head.py  action_mapping.py  actions.py  checkpoint.py  gym3_types.py  gymnasium_compat.py  policy.py  torch_util.py
notebooks/: inspect_lancedb_rollouts.ipynb
slurm/: collect_vpt.sbatch
