[project]
name = "video-pre-training"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gymnasium>=1.0",
    "lancedb>=0.33.0",
    "minerl",
    "numpy>=1.26",
    "opencv-python>=4.9",
    "pandas>=3.0.3",
    "torch>=2.6",
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
minerl = { workspace = true }

[tool.uv.workspace]
members = [
    "minerl",
]
